--- a/android/local.properties
+++ b/android/local.properties
@@ -6,3 +6,4 @@
 # header note.
 #Sat Jan 27 14:27:05 CST 2024
 sdk.dir=/Users/liuqi/Library/Android/sdk
+ndk.dir=/Users/liuqi/Library/Android/sdk/ndk/25.1.8937393
