--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -153,7 +153,8 @@ dependencies {
     implementation("com.facebook.react:react-android")
 
     implementation("androidx.swiperefreshlayout:swiperefreshlayout:1.0.0")
-
+    implementation "com.aliyun.ams:alicloud-android-third-push:3.8.7"
+    implementation 'com.fasterxml.jackson.core:jackson-databind:2.13.1'
     debugImplementation("com.facebook.flipper:flipper:${FLIPPER_VERSION}")
     debugImplementation("com.facebook.flipper:flipper-network-plugin:${FLIPPER_VERSION}") {
         exclude group:'com.squareup.okhttp3', module:'okhttp'
